added more files

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <header class="clear">
   <div class="container">
 
-  <a href="#">  <img class="logo" src="images/logo1.png"
-     width:"200" alt="home"></a>
+  <a href="#">  <img class="logo" src="l.png" alt="home"></a>
     <nav>
       <ul>
         <li><a href="#">men</a></li>
